<resources>
    <string name="app_name">Sentient</string>
    <string name="copyright_ss">Copyright © Spudg Studios</string>
    <string name="about_sentient">About Sentient</string>
    <string name="sentientlogo">sentientLogo</string>
    <string name="v1_0_0_made_by_spudg_studios">v1.0.0, made by Spudg Studios</string>
    <string name="sentient">Sentient</string>
    <string name="sentient_description">Sentient is a simple mood tracker where you can post ratings and see a visualisation of how your mood changes over days and months. \n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions or you\'ve found a bug, please send an email below!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="send_an_email">Send an email</string>
    <string name="visualiser">Visualiser</string>
    <string name="about">About</string>
    <string name="january_2021">January 2021</string>
    <string name="average_score_this_month">Average score this month</string>
    <string name="add_record_for_today">Add record for today</string>
    <string name="no_records">No records yet. Tap below to add a record for today!</string>
    <string name="viewing">Viewing</string>
    <string name="nov_2020">Nov 2020</string>
    <string name="left_bracket">(</string>
    <string name="change">change</string>
    <string name="change_capital">Change</string>
    <string name="right_bracket">)</string>
    <string name="average_daily_scores">Average daily scores</string>
    <string name="split_of_average_scores">Split of average scores</string>
    <string name="notes_from_this_month">Notes from this month</string>
    <string name="no_notes_posted_yet_this_month">No notes posted yet this month</string>
    <string name="average_monthly_scores_for_year">Average monthly scores\nfor year</string>
    <string name="set_record_date">Set record date</string>
    <string name="submit">Submit</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="notes">Notes</string>
    <string name="post_for">Post for</string>
    <string name="_18_jan_2021">18 Jan 2021</string>
    <string name="at">at</string>
    <string name="_15_46">15:46</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="delete_record">Delete record</string>
    <string name="are_you_sure_you_want_to_delete_this_mood_record">Are you sure you want to delete this mood record?</string>
    <string name="delete">Delete</string>
    <string name="all_rights_reserved">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="philjay_mpandroidchart">PhilJay/MPAndroidChart</string>
    <string name="licensed_under_the_apache_license_2_0">Licensed under the Apache License 2.0</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="done">Done</string>
    <string name="how_were_you_feeling">How were you feeling?</string>
    <string name="update">Update</string>
    <string name="notes_for_this_record">Notes for this record</string>
    <string name="no_notes">No notes added yet. Tap on the row to add a note for this record!</string>
    <string name="set_record_time">Set record time</string>
    <string name="select_month_to_view">Select month to view</string>
    <string name="thursday_14_january_2021">Thursday 14 January 2021</string>
    <string name="reminder">Reminder</string>
    <string name="support">Support</string>
    <string name="made_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="set_daily_reminder_time">Set daily reminder time</string>
    <string name="update_your_reminder">Update your reminder</string>
    <string name="add_a_new_reminder">Add a new reminder</string>
    <string name="current_reminder_none">Current reminder: None</string>
    <string name="current_reminder_time">Current reminder: %1$s:%2$s daily</string>
    <string name="average_month_score_heading">%1$s %2$s</string>
    <string name="day_month_year">%1$s %2$s %3$s</string>
    <string name="hour_minute">%1$s:%2$s</string>
    <string name="visualiser_note_from_date_time">from %1$s %2$s %3$s at %4$s:%5$s</string>
    <string name="at_time">at %1$s</string>
    <string name="no_scores_posted">No scores posted yet this month</string>
    <string name="one_score_posted">1 score posted this month</string>
    <string name="number_scores_posted">%1$s scores posted this month</string>
    <string name="month_year">%1$s %2$s</string>
    <string name="average_monthly_scores_visualiser_heading">Average monthly scores\nfor %1$s</string>
    <string name="danielmartinus_konfetti">DanielMartinus / Konfetti</string>
    <string name="licensed_under_the_isc_license">Licensed under the ISC License</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="no_scores_posted_yet_this_month">No scores posted yet this month.</string>
    <string name="sign_up_to">Sign up to</string>
    <string name="sentient_logo">Sentient logo</string>
    <string name="divider">Divider</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to">Sign in to</string>
    <string name="sign_in">Sign in</string>
    <string name="mood_tracker_amp_visualiser"><![CDATA[Mood Tracker & Visualiser]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="firebase_pp_link"><a href="https://firebase.google.com/support/privacy">Firebase Privacy Policy</a></string>
    <string name="sentient_pp_link"><a href="https://docs.google.com/document/d/13xwVTv2-UjiIXAd9teQtx_1icbOlJUKoLGbFfVODBdU/edit?usp=sharing">Sentient Privacy Policy</a></string>
    <string name="opted_in_for_analytics">Currently opted in for analytics</string>
    <string name="opted_out_for_analytics">Currently opted out for analytics</string>
    <string name="hi_comma_space">Hi, %1$s</string>
    <string name="email_is_verified">Email is verified</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="email_colon">Email: %1$s</string>
    <string name="total_records_posted_number">Total records posted: %1$s</string>
    <string name="back">Back</string>
    <string name="your_account">Your Account</string>
    <string name="hi_test_user">Hi, Test User</string>
    <string name="account_details">Account details</string>
    <string name="email_example_test_com">Email: example@test.com</string>
    <string name="re_send_verification_email">Re-send verification email</string>
    <string name="no_records_posted_yet">No records posted yet.</string>
    <string name="edit_account">Edit account</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="current_opted_out_of_analytics">Current opted out of analytics</string>
    <string name="change_data_permissions">Change data permissions</string>
    <string name="more">More</string>
    <string name="divider_line">Divider line</string>
    <string name="new_email">New email</string>
    <string name="analytics">Analytics</string>
    <string name="firebase_analytics_explanation">This application makes use of Google Firebase for analytics. This helps us continue to make Sentient better for users. However, you can choose to opt in or opt out from this service. Please see below the privacy policy relating to Firebase Analytics.</string>
    <string name="specify_if_opt_in_out_analytics">Please specify whether you want to opt-in or opt-out for Sentient collecting your usage data for these purposes. You can change this later through the Accounts page.</string>
    <string name="opt_in">Opt-in</string>
    <string name="opt_out">Opt-out</string>
    <string name="change_account_name">Change account name</string>
    <string name="new_name">New name</string>
    <string name="new_password">New password</string>
    <string name="data_privacy">Data privacy</string>
    <string name="firebase_cloud_storage_auth_explanation">This application makes use of Google Firebase for analytics, cloud data storage and user authentication. Please tap on the links below for the respective privacy policies for each of these services.</string>
    <string name="cloud_storage_auth_necessary">Cloud data storage and user authentication are required for Sentient to work properly. By using this application you are consenting for your data to be collected for these purposes.</string>
    <string name="accept">Accept</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="please_re_sign_in">Please re-sign in</string>
    <string name="add_or_change_reminder">Add or change reminder</string>
    <string name="current_reminder_20_00_daily">Current reminder: 20:00 daily</string>
    <string name="remove_your_reminder">Remove your reminder</string>
    <string name="email_verification">Email verification</string>
    <string name="the_email_verification_has_been_resent_to_your_email_address">The email verification has been resent to your email address.</string>
</resources>