<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <ImageView
                android:id="@+id/backToRecordsFromAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/back_btn_padding"
                android:contentDescription="@string/back"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutSentientHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/your_account"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/backToRecordsFromAccount"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/backToRecordsFromAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/logo_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="6dp"
                        android:text="@string/hi_test_user"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="6dp"
                        android:text="@string/account_details"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/userEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="6dp"
                        android:text="@string/email_example_test_com"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/emailVerified"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/email_not_verified"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnSendEmailVerification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="10dp"
                        android:text="@string/re_send_verification_email"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/totalRecordsPosted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans_light"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/no_records_posted_yet"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="80dp"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="6dp"
                        android:text="@string/edit_account"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/btnChangeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/change_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnChangeEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/change_email"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnChangePassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/change_password"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/optedInOutAnalytics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/current_opted_out_of_analytics"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/btnAnalyticsConsent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/open_sans_light"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/change_data_permissions"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

