<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandingActivity">

    <LinearLayout
        android:id="@+id/llLogoTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/logo_landing"
                android:contentDescription="@string/sentient_logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/sentient"
                android:textColor="#000000"
                android:textSize="35sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/mood_tracker_amp_visualiser"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/lineTitleButtons"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/record_row_line"
            android:contentDescription="@string/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_custom_login"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/sign_in"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/lineLogInSignUp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/lineLogInSignUp"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/record_row_line"
            android:contentDescription="@string/divider"
            app:layout_constraintBottom_toTopOf="@id/btnTOU"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/btn_custom_signup"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lineLogInSignUp" />

        <TextView
            android:id="@+id/btnTOU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/terms_of_use"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btnPP" />

        <TextView
            android:id="@+id/btnPP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:padding="5dp"
            android:text="@string/privacy_policy"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnTOU"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>