<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_solid"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutForgotPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSendResetEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_light"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/send_reset_email"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/tvCancelResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_light"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>